--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,13 @@ BOT_TOKEN=your_bot_token_here
 # Local için SQLite:
 DATABASE_URL=sqlite+aiosqlite:///./price_tracker.db
 
-# Railway için PostgreSQL (Railway otomatik ekler):
+# Render için PostgreSQL (Render otomatik ekler):
 # DATABASE_URL=postgresql+asyncpg://user:password@host:port/database
+
+# Webhook URL (Render deployment için gerekli)
+# Local development için boş bırakın (polling kullanır)
+# Render için: https://your-app-name.onrender.com
+WEBHOOK_URL=
+
+# Port (Render otomatik ayarlar, local için varsayılan 8080)
+PORT=8080
