--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,22 @@
-web: python -m src.price_tracker_bot.main
+services:
+  - type: web
+    name: price-tracker-bot
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: python -m src.price_tracker_bot.main
+    envVars:
+      - key: BOT_TOKEN
+        sync: false
+      - key: WEBHOOK_URL
+        value: https://price-tracker-bot.onrender.com
+      - key: PORT
+        value: 10000
+      - key: DATABASE_URL
+        fromDatabase:
+          name: price-tracker-db
+          property: connectionString
+
+databases:
+  - name: price-tracker-db
+    databaseName: price_tracker
+    user: price_tracker_user
